# synthapi

./: .gitignore  README.md  app.py  cdk.context.json  openapi.json  pyproject.toml  requirements.txt  uploader.py
fapi/: fapi_stack.py
fapi/lambda/: index.py  init_api.py  requirements.txt  retrieve_pinecone.py  synthapi_server.py
pinecone_retriever/: test.py
sample/: 1.json  2.json  3.json
synthapi/: api_client.py  api_registry.json  api_registry.py  cli.py  parser.py  s3_handler.py
synthapi/generated_apis/: current_api_name.txt  post_test.json  post_test_data.txt  test_api.json  test_api_data.txt  testapi1.json  testapi2.json  testapi2_data.txt  testapi3.json  testapi3_data.txt
synthapi/static/: form.js  index.html
synthapi/static/components/: ParameterParser.js
tes/: 1.json
tests/unit/: test_fapi_stack.py
