[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthapi"
version = "0.1.0"
description = "A tool for local API mocking"
requires-python = ">=3.7"
dependencies = [
    "typer[all]>=0.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",  # Added for S3 support
    "requests>=2.31.0"
]

[project.scripts]
synthapi = "synthapi.cli:app"